fixed submit form

--- a/src/index.html
+++ b/src/index.html
@@ -355,7 +355,7 @@
                 <input
                   name="Email"
                   type="email"
-                  placeholder="E-Mail"
+                  placeholder="your@mail.com"
                   class="form__field"
                   required
                 >
@@ -364,9 +364,9 @@
                 <input
                   name="Phone"
                   type="tel"
-                  placeholder="Phone Number"
+                  placeholder="111222333"
                   class="form__field"
-                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"
+                  pattern="[0-9]{3}[0-9]{3}[0-9]{3}"
                   required
                 >
               </label>
