fixed hover effect in product img

--- a/src/index.html
+++ b/src/index.html
@@ -187,11 +187,13 @@
           </div>
           <div class="shop__products">
             <article class="product">
-              <img
-                src="/images/products/oil.jpg"
-                class="product__img"
-                alt="product oil"
-              >
+              <div class="product__wrap-img">
+                <img
+                  src="/images/products/oil.jpg"
+                  class="product__img"
+                  alt="product oil"
+                >
+              </div>
               <div class="product__about">
                 <h3 class="product__title">Hydrophilic oil</h3>
                 <div class="product__price">16 PLN</div>
@@ -199,11 +201,13 @@
             </article>
 
             <article class="product product__desktop">
-              <img
-                src="/images/products/cosmetic2.jpg"
-                class="product__img"
-                alt="product oil"
-              >
+              <div class="product__wrap-img">
+                <img
+                  src="/images/products/cosmetic2.jpg"
+                  class="product__img"
+                  alt="product oil"
+                >
+              </div>
               <div class="product__about">
                 <h3 class="product__title">ubtan</h3>
                 <div class="product__price">16 PLN</div>
