fixed action margin and width

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
           20% of sales at a wild bird shelter
         </p>
         <a class="header__button" href="#">
-          <button class="button button--center button--desktop">shop</button>
+          <button class="button button--desktop">shop</button>
         </a>
       </div>
     </header>
