fixed min-height for header on desktop, changed pattern tel in form

--- a/src/index.html
+++ b/src/index.html
@@ -372,7 +372,7 @@
                   type="tel"
                   placeholder="111222333"
                   class="form__field"
-                  pattern="[0-9]{3}[0-9]{3}[0-9]{3}"
+                  pattern="[0-9]{9}"
                   required
                 >
               </label>
