--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,410 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>
+      NA MU
+    </title>
+    <link rel="stylesheet" href="./styles/styles.scss">
+    <link
+      rel="shortcut icon"
+      href="./images/NAMU.svg"
+      type="image/x-icon"
+    >
+    <!-- #region fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+    <!-- #endregion -->
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <!-- #region header -->
+    <header class="header">
+      <div class="container header--container">
+        <div class="header__top-bar">
+          <a href="#menu" class="menu-icon"></a>
+
+          <a href="#home" class="logo">
+            na
+            <br>
+            mu
+          </a>
+        </div>
+
+        <h1 class="header__head">
+          Художній музей
+        </h1>
+
+        <a href="#" class="header__link">
+          Квитки
+        </a>
+
+        <span>
+          Події
+        </span>
+      </div>
+
+    </header>
+    <!-- #endregion -->
+
+    <!-- #region menu -->
+    <aside class="menu" id="menu">
+      <div class="container menu--container">
+        <a href="#" class="close-icone"></a>
+
+        <nav class="menu__nav">
+          <a href="#gallery" class="menu__nav-links">
+            Галерея
+          </a>
+
+          <a href="#about__us" class="menu__nav-links">
+            Про нас
+          </a>
+
+          <a href="#events" class="menu__nav-links">
+            Виставки та події
+          </a>
+
+          <a href="#contacts" class="menu__nav-links">
+            Контакти
+          </a>
+        </nav>
+
+        <div class="menu__line"></div>
+
+        <div class="menu__timetable">
+          <h6 class="menu__timetable-head">
+            Графік роботи
+          </h6>
+
+          <div class="menu__timetable-content">
+            <ul class="menu__timetable-list">
+              <li class="menu__timetable-list-items">
+                12:00 - 20:00
+                <span>середа</span>
+              </li>
+
+              <li class="menu__timetable-list-items">
+                12:00 - 20:00
+                <span>четвер</span>
+              </li>
+
+              <li class="menu__timetable-list-items">
+                12:00 - 20:00
+                <span>п&apos;ятниця</span>
+              </li>
+
+              <li class="menu__timetable-list-items">
+                11:00 - 19:00
+                <span>субота</span>
+              </li>
+
+              <li class="menu__timetable-list-items">
+                11:00 - 19:00
+                <span>неділя</span>
+              </li>
+            </ul>
+
+            <p class="menu__timetable-text">
+              <span>Вихідні:</span>
+              понеділок, вівторок.<br>
+              Каса припиняє роботу за 1 годину до закриття музею.
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+
+    <!-- #region main -->
+    <main class="main">
+      <!-- #region section events -->
+      <section class="events" id="events">
+        <div class="container events--container">
+          <h3 class="sections-name">
+            Актуальні події
+          </h3>
+
+          <div class="event__cards event--card1">
+            <img
+              src="./images/main/exhibition/exhibition-img-1.png"
+              alt="картина з виставки - Йду і повертаюсь"
+              class="event__cards-img"
+            >
+
+            <div class="event__card-content">
+              <span class="event__card-date">
+                Виставка
+              </span>
+
+              <h4 class="event__card-name">
+                Йду і повертаюсь
+              </h4>
+
+              <p class="event__card-info">
+                Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="event__cards event--card2">
+            <img
+              src="./images/main/exhibition/exhibition_img-2.png"
+              alt="картина з виставки - І спогади і мрії"
+              class="event__cards-img"
+            >
+
+            <div class="event__card-content">
+              <span class="event__card-date">
+                Виставка
+              </span>
+
+              <h4 class="event__card-name">
+                І спогади і мрії
+              </h4>
+
+              <p class="event__card-info">
+                Національний художній музей України до 100 річчя від дня народження
+                видатної української художниці Тетяни Яблонської відкриває ретроспективну
+                ювілейну виставку &OpenCurlyDoubleQuote;І спогади і мрії&CloseCurlyDoubleQuote;.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="event--card3">
+          <div class="event--card3-content">
+            <span class="event--card3-date">
+              Лекція
+            </span>
+
+            <h4 class="event--card3-name">
+              Від класицизму до романтизму
+            </h4>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region section gallery -->
+      <section class="gallery" id="gallery">
+        <div class="container gallery--container">
+          <h3 class="sections-name">
+            Галерея
+          </h3>
+
+          <div class="gallery__img-block" id="gallery__img-block">
+            <img
+              src="./images/main/gallery/gallery-img1.png"
+              alt="img1"
+              class="gallery__img gallery--img1"
+            >
+
+            <img
+              src="./images/main/gallery/gallery-img3.png"
+              alt="img3"
+              class="gallery__img gallery--img3"
+            >
+
+            <img
+              src="./images/main/gallery/gallery-img4.png"
+              alt="img4"
+              class="gallery__img gallery--img4"
+            >
+
+            <img
+              src="./images/main/gallery/gallery-img5.png"
+              alt="img5"
+              class="gallery__img gallery--img5"
+            >
+          </div>
+
+          <div class="gallery__button-block">
+            <button
+              class="gallery__button button1"
+              id="button1"
+            ></button>
+
+            <button
+              class="gallery__button button2"
+              id="button2"
+            ></button>
+
+            <button
+              class="gallery__button button3"
+              id="button3"
+            ></button>
+
+            <button
+              class="gallery__button button4"
+              id="button4"
+            ></button>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region section about-us -->
+      <section class="about-us" id="about__us">
+        <div class="container about-us--container">
+          <div class="about-us__content">
+            <h3 class="about-us__content-head">
+              Підписка
+            </h3>
+
+            <p class="about-us__content-text">
+              Бути в курсі всіх актуальних подій
+              та останніх новин.
+            </p>
+          </div>
+
+          <form
+            action="#"
+            class="about-us__form"
+            method="post"
+            target="_blank"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="about-us-input"
+              required
+            >
+
+            <button
+              type="submit"
+              class="about-us-button"
+            >
+              <img src="./images/main/about-us/about-us-arow.svg" alt="arrow">
+            </button>
+          </form>
+        </div>
+      </section>
+      <!-- #endregion -->
+    </main>
+    <!-- #endregion -->
+
+    <!-- #region footer -->
+    <footer class="footer">
+      <div class="container footer--container">
+        <div class="footer__icon">
+          <a href="#home" class="footer__icon-logo">
+            na<br>
+            mu
+          </a>
+
+          <div class="footer__icon-social">
+            <a href="https://uk-ua.facebook.com/" class="footer__icon-facebook">
+
+            </a>
+
+            <a href="https://www.instagram.com/" class="footer__icon-instagram">
+
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__timetable">
+          <h6 class="footer__timetable-head">
+            Графік роботи
+          </h6>
+
+          <div class="footer__timetable-content">
+            <ul class="footer__timetable-list">
+              <li class="footer__timetable-list-items">
+                12:00 - 20:00
+                <span>середа</span>
+              </li>
+
+              <li class="footer__timetable-list-items">
+                12:00 - 20:00
+                <span>четвер</span>
+              </li>
+
+              <li class="footer__timetable-list-items">
+                12:00 - 20:00
+                <span>п&apos;ятниця</span>
+              </li>
+
+              <li class="footer__timetable-list-items">
+                11:00 - 19:00
+                <span>субота</span>
+              </li>
+
+              <li class="footer__timetable-list-items">
+                11:00 - 19:00
+                <span>неділя</span>
+              </li>
+            </ul>
+
+            <p class="footer__timetable-text">
+              <span>Вихідні:</span>
+              понеділок, вівторок.<br>
+              Каса припиняє роботу за 1 годину до закриття музею.
+            </p>
+          </div>
+        </div>
+
+        <div class="footer__contacts" id="contacts">
+          <h6>Контакти:</h6>
+
+          <div class="footer__contacts-links">
+            <a href="https://maps.app.goo.gl/kGwcMvfQeSPJDUM3A" target="_blank">
+              вул. М. Грушевського, 6;<br>
+              Київ, 01001
+            </a>
+
+            <a href="tel:380442781357">
+              тел. +38 (044) 278-13-57
+            </a>
+
+            <a href="tel:380442787454">
+              факс. +38 (044) 278-74-54
+            </a>
+
+            <a href="mailto:info@namu.kiev.ua">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <nav class="footer__nav">
+          <a href="#gallery" class="footer__nav-links">
+            Галерея
+          </a>
+
+          <a href="#about__us" class="footer__nav-links">
+            Про&#160;нас
+          </a>
+
+          <a href="#events" class="footer__nav-links">
+            Виставки та події
+          </a>
+
+          <a href="#contacts" class="footer__nav-links">
+            Контакти
+          </a>
+        </nav>
+
+        <div class="footer__bottom-section">
+          <p>
+            Designed by Zhyriada Marina
+          </p>
+
+          <p>
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion -->
+
+    <a href="#top" class="arrow-up"></a>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
