--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,8 @@
                   >
                 </a>
                 <div class="about-us__icons">
-                  <a href="#" class="about-us__link-icon">
+                  <a href="#" class="about-us__link-icon"
+                  target="_blank">
                     <img
                       src="./images/icons/facebook.svg"
                       alt="facebook"
@@ -342,7 +343,8 @@
                     >
                   </a>
 
-                  <a href="#" class="about-us__link-icon">
+                  <a href="#" class="about-us__link-icon"
+                  target="_blank">
                     <img
                       src="./images/icons/instagram.svg"
                       alt="instagram"
