--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
                   >
                 </a>
                 <div class="about-us__icons">
-                  <a href="#" class="about-us__link-icon"
+                  <a href="https://www.facebook.com/" class="about-us__link-icon"
                   target="_blank">
                     <img
                       src="./images/icons/facebook.svg"
@@ -343,7 +343,7 @@
                     >
                   </a>
 
-                  <a href="#" class="about-us__link-icon"
+                  <a href="https://www.instagram.com/" class="about-us__link-icon"
                   target="_blank">
                     <img
                       src="./images/icons/instagram.svg"
