--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,318 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Художній Музей</title>
+    <link rel="icon shortcut" href="./images/logo.svg">
+    <link rel="stylesheet" href="./styles/styles.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="top-bar__mobile">
+        <div class="top-bar__mobile__items">
+          <a href="#menu" class="icon icon--menu icon--menu-top-bar"></a>
+          <a href="#" class="top-bar__mobile-logo">
+            <img
+              src="./images/logo.svg"
+              alt="logo"
+              class="header__logo"
+            >
+          </a>
+        </div>
+
+      </div>
+      <div class="header__content">
+        <a href="#menu" class="icon icon--menu icon--menu-content"></a>
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="tickets">
+          <p class="tickets__text">КВИТКИ</p>
+          <a
+            href="#"
+            class="tickets__button"
+          >
+            <div class="icon icon--arrow"></div>
+          </a>
+        </div>
+        <div class="header__events">
+          <div class="header__events-line"></div>
+          <p class="header__events-text">Події</p>
+        </div>
+      </div>
+
+      <div class="top-bar__tablet">
+        <div class="top-bar__tablet__items">
+          <a href="#" class="top-bar__tablet-logo">
+            <img
+              src="./images/logo.svg"
+              alt="logo"
+              class="header__logo"
+            >
+          </a>
+        </div>
+      </div>
+    </header>
+    <aside id="menu" class="page__menu menu">
+      <div class="menu__wrapper">
+        <section class="menu__navigation">
+          <a href="#" class="icon icon--close"></a>
+          <nav class="menu__navigation-nav">
+            <a href="#gallery" class="menu__navigation-nav__link">Галерея</a>
+            <a href="#subscription" class="menu__navigation-nav__link">Про Нас</a>
+            <a href="#events" class="menu__navigation-nav__link">Виставки та <br> події</a>
+            <a href="#footer" class="menu__navigation-nav__link">Контакти</a>
+          </nav>
+        </section>
+        <section class="menu__work">
+          <p class="menu__work-title">Графік роботи</p>
+          <article class="menu__work-time">
+            <div class="menu__work-list">
+              <p class="menu__work-days">
+                <strong class="menu__work-hours">12:00 — 20:00</strong> середа
+              </p>
+              <p class="menu__work-days">
+                <strong class="menu__work-hours">12:00 — 20:00</strong> четверг
+              </p>
+              <p class="menu__work-days">
+                <strong class="menu__work-hours">12:00 — 20:00</strong> п'ятниця
+              </p>
+              <p class="menu__work-days">
+                <strong class="menu__work-hours">11:00 — 19:00</strong> субота
+              </p>
+              <p class="menu__work-days">
+                <strong class="menu__work-hours">11:00 — 19:00</strong> неділя
+              </p>
+            </div>
+          </article>
+          <article class="menu__work-day-off">
+            <div class="menu__work-daysoff">
+              <p class="menu__work-daysoff__days">
+                <strong class="menu__work-daysoff__title">
+                  Вихідні:
+                </strong> понеділок, вівторок
+              </p>
+            </div>
+            <p class="menu__work-day-off__postscript">Каса припиняє роботу за 1 годину до закриття музею</p>
+          </article>
+        </section>
+      </div>
+    </aside>
+
+    <main>
+      <section class="current-events" id="events">
+        <div class="container">
+          <h2 class="section-title">Актуальні події</h2>
+          <article class="event event--positionOne">
+            <a href="#" class="event__photos-link">
+              <img
+                src="./images/picture/pic-1.png"
+                alt="pic-1"
+                class="event__photo"
+              >
+            </a>
+
+            <div class="event__info">
+              <p class="event__date">
+                <strong class="event__date-title">ВИСТАВКА</strong> 26.08-29.11.2019
+              </p>
+              <h3 class="event__name">Йду і повертаюсь</h3>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </article>
+          <article class="event event--positionTwo">
+            <a href="#" class="event__photos-link">
+              <img
+                src="./images/picture/pic-2.png"
+                alt="pic-2"
+                class="event__photo"
+              >
+            </a>
+
+            <div class="event__info">
+              <p class="event__date">
+                <strong class="event__date-title">ВИСТАВКА</strong> 26.08-29.11.2019
+              </p>
+              <h3 class="event__name">І спогади і мрії</h3>
+              <p class="event__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+
+        <article class="event__lec">
+          <div class="event__lec-bg"></div>
+          <div class="event__lec-info">
+            <p class="event__lec-date">
+              <strong class="event__lec-date-title">ЛЕКЦІЯ</strong> 26/08/2019 - 11:00
+            </p>
+            <h3 class="event__lec-name">Від класицизму до романтизму</h3>
+          </div>
+        </article>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <h2 class="section-title section-title-gal">Галерея</h2>
+        <article class="paintings">
+          <img
+            src="./images/picture/pic-4.png"
+            alt="painting-1"
+            class="paintings__photo paintings__photo--hot-girl"
+          >
+
+          <img
+            src="./images/picture/pic-8.png"
+            alt="painting-2"
+            class="paintings__photo paintings__photo--future-food"
+          >
+          <img
+            src="./images/picture/pic-5.png"
+            alt="painting-2"
+            class="paintings__photo paintings__photo--street"
+          >
+          <img
+            src="./images/picture/pic-6.png"
+            alt="painting-3"
+            class="paintings__photo paintings__photo--park"
+          >
+          <img
+            src="./images/picture/pic-7.png"
+            alt="painting-4"
+            class="paintings__photo paintings__photo--sea"
+          >
+        </article>
+        <article class="slider">
+          <img
+          src="./images/icon/slider-item.svg"
+          alt="slider"
+          class="slider__img"
+        >
+        </article>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <article class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form
+              action="#"
+              class="subscription__form"
+              method="post"
+              autocomplete="on"
+              onsubmit="this.reset(); return false"
+            >
+              <input
+                type="email"
+                placeholder="E-mail"
+                class="subscription__email"
+                required
+                autocomplete="email"
+              >
+              <button class="subscription__button">
+                <div class="icon icon--arrow-sub"></div>
+              </button>
+            </form>
+          </article>
+        </div>
+      </section>
+    </main>
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__info">
+            <div class="footer__social">
+              <a href="#" class="footer__social-logo-link">
+                <img
+                  src="./images/logo.svg"
+                  alt="logo"
+                  class="footer__social-logo"
+                >
+              </a>
+              <div class="footer__social-icon">
+                <a href="#" class="icon icon--facebook"></a>
+                <a href="#" class="icon icon--instagram"></a>
+              </div>
+
+            </div>
+            <div class="footer__work">
+              <p class="footer__work-title">Графік роботи</p>
+              <div class="footer__work-list">
+                <p class="footer__work-days">
+                  <strong class="footer__work-hours">12:00 — 20:00</strong> середа
+                </p>
+                <p class="footer__work-days">
+                  <strong class="footer__work-hours">12:00 — 20:00</strong> четверг
+                </p>
+                <p class="footer__work-days">
+                  <strong class="footer__work-hours">12:00 — 20:00</strong> п'ятниця
+                </p>
+                <p class="footer__work-days">
+                  <strong class="footer__work-hours">11:00 — 19:00</strong> субота
+                </p>
+                <p class="footer__work-days">
+                  <strong class="footer__work-hours">11:00 — 19:00</strong> неділя
+                </p>
+              </div>
+              <p class="footer__work-daysoff">
+                <strong class="footer__work-daysoff__title">
+                  Вихідні:
+                </strong> понеділок, вівторок
+              </p>
+              <p class="footer__work-daysoff__postscript">Каса припиняє роботу за 1 годину до закриття музею</p>
+
+            </div>
+            <div class="footer__contacts">
+              <p class="footer__contacts-title">Контакти:</p>
+              <a
+                href="https://maps.app.goo.gl/Q9GcaQsebYZVj5Kk6"
+                class="footer__contacts-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                href="tel: +380442781357"
+                class="footer__contacts-link"
+              >
+                <br>тел. +38 (044) 278-13-57
+              </a>
+              <a
+                href="tel: +380442787454"
+                class="footer__contacts-link"
+              >
+                <br>факс +38 (044) 278-74-54
+              </a>
+              <a
+                href="mailto: info@namu.kiev.ua"
+                class="footer__contacts-link"
+              >
+                <br>e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+            <a href="#" class="footer__back">
+              <div class="icon icon--arrow-up"></div>
+            </a>
+          </div>
+          <div class="footer__border"></div>
+          <div class="footer__nav">
+            <div class="footer__nav-links footer__nav-link-pos1">
+              <a href="#gallery" class="footer__nav-link">Галерея</a>
+              <a href="#events" class="footer__nav-link">Виставки та події</a>
+            </div>
+            <div class="footer__nav-links footer__nav-link-pos2">
+              <a href="#subscription" class="footer__nav-link">Про Нас</a>
+              <a href="#footer" class="footer__nav-link">Контакти</a>
+            </div>
+          </div>
+          <div class="footer__end">
+            <p class="footer__end-designed">Designed by Zhyriada Marina</p>
+            <p class="footer__end-rights">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
