--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,359 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header" id="Home">
+      <a href="#Events" class="header__addition">події</a>
+      <div class="header__content">
+        <div class="header__pictures">
+          <a href="#" class="header__logo link">
+            na
+            <br>
+            mu
+          </a>
+        </div>
+        <div class="header__tickets">
+          <h1 class="header__tickets-title">
+            Художній музей
+          </h1>
+          <div class="header__buy">
+            <a href="#" class="header__buy-title link">
+              Квитки
+            </a>
+            <a href="#" class="header__buy-button"></a>
+          </div>
+        </div>
+      </div>
+      <div class="header__top-action">
+        <a href="#menu" class="header__menu-opener"></a>
+      </div>
+    </header>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="menu__content">
+        <div class="menu__nav">
+          <a href="#Home" class="menu__nav-link">
+            <img
+            src="./images/Close.svg"
+            alt="Close"
+            class="menu__nav-icon"
+            >
+          </a>
+          <div class="first-block first-block--menu">
+            <a href="#Galary" class="menu__link link">Галерея</a>
+            <a href="#Events" class="menu__link link">Виставки та події</a>
+          </div>
+          <div class="second-block second-block--menu">
+            <a href="#About-us" class="menu__link link">Про нас</a>
+            <a href="#Contacts" class="menu__link link">Контакти</a>
+          </div>
+        </div>
+        <div class="menu__line"></div>
+        <div class="menu__schedule">
+          <p class="menu__schedule-title">Графік роботи</p>
+          <div class="menu__schedule-container">
+            <ul class="menu__schedule-time">
+              <li>
+                <strong>12:00 - 20:00</strong> середа
+              </li>
+              <li>
+                <strong>12:00 - 20:00</strong> четвер
+              </li>
+              <li>
+                <strong>12:00 - 20:00</strong> п'ятниця
+              </li>
+              <li>
+                <strong>11:00 - 19:00</strong> субота
+              </li>
+              <li>
+                <strong>11:00 - 19:00</strong> неділя
+              </li>
+            </ul>
+            <p class="menu__schedule-description">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class="main">
+      <div class="main__container">
+        <section class="events" id="Events">
+          <div class="container">
+            <h2 class="events__title">Актуальні події</h2>
+            <div class="events__cards">
+              <div class="events__card">
+                <img
+                  src="./images/events/Events-go.png"
+                  alt="Go and come back"
+                  class="events__card-image"
+                >
+                <div class="events__card-content">
+                  <div class="events__card-type">
+                    <p class="events__card-exhibition">
+                      Виставка
+                    </p>
+                    <p class="events__card-date">
+                      26.08-29.11.2019
+                    </p>
+                  </div>
+                  <h3 class="events__card-name events__card-name--square">
+                    Йду і повертаюсь
+                  </h3>
+                  <p class="events__card-description">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </div>
+              <div class="events__card">
+                <img
+                  src="./images/events/Events-dreams.png"
+                  alt="Memories and dreams"
+                  class="events__card-image"
+                >
+                <div class="events__card-content">
+                  <div class="events__card-type">
+                    <p class="events__card-exhibition">Виставка</p>
+                    <p class="events__card-date">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="events__card-name
+                  events__card-name--square">
+                    І спогади і мрії
+                  </h3>
+                  <p class="events__card-description padding-tablet">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="lecture">
+          <div class="lecture__image">
+            <div class="lecture__event">
+              <div class="lecture__subtitle">
+                <div class="lecture__subtitle-name">
+                  Лекція
+                </div>
+                <div class="lecture__subtitle-date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+              <h3 class="lecture__event-title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </section>
+        <section class="gallery" id="Gallery">
+          <div class="container">
+            <h2 class="gallery__title">
+              Галерея
+            </h2>
+            <div class="gallery__pictures">
+              <div class="gallery__slider slider">
+                <input
+                  type="radio"
+                  id="btn1"
+                  name="controls"
+                  checked
+                  class="slider__input slider__input--1"
+                >
+                <label for="btn1" class="slider__label slider__label--1"></label>
+
+                <input
+                  type="radio"
+                  id="btn2"
+                  name="controls"
+                  class="slider__input slider__input--2"
+                >
+                <label for="btn2" class="slider__label slider__label--2"></label>
+
+                <input
+                  type="radio"
+                  id="btn3"
+                  name="controls"
+                  class="slider__input slider__input--3"
+                >
+                <label for="btn3" class="slider__label slider__label--3"></label>
+
+                <input
+                  type="radio"
+                  id="btn5"
+                  name="controls"
+                  class="slider__input slider__input--5"
+                >
+                <label for="btn5" class="slider__label slider__label--5"></label>
+
+                <div id="slider-inner" class="slider__inner">
+                  <ul class="slider__list">
+                    <li class="slide slide--1 slider__slide">
+                      <img
+                        src="./images/gallery/Slider_photo(1).png"
+                        alt="ss"
+                        class="slider__picture slider__picture--1"
+                      >
+                    </li>
+                    <li class="slide slide--2 slider__slide">
+                      <img
+                        src="./images/gallery/Slider_photo(2).png"
+                        alt="ss"
+                        class="slider__picture"
+                      >
+                    </li>
+                    <li class="slide slide--3 slider__slide">
+                      <img
+                        src="./images/gallery/Slider_photo(3).png"
+                        alt="ss"
+                        class="slider__picture slider__picture--3"
+                      >
+                    </li>
+                    <li class="slide slide--4 slider__slide">
+                      <img
+                        src="./images/gallery/Slider_photo(4).png"
+                        alt="ss"
+                        class="slider__picture slider__picture--4"
+                      >
+                    </li>
+                    <li class="slide slide--5 slider__slide">
+                      <img
+                        src="./images/gallery/Slider_photo(5).png"
+                        alt="ss"
+                        class="slider__picture slider__picture--5"
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="about" id="About-us">
+          <h2 class="about__title">Підписка</h2>
+          <div class="about__description">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <div class="about__form">
+            <form class="form">
+              <input
+                type="email"
+                placeholder="E-mail"
+                class="form__input"
+              >
+              <button type="submit" class="form__button">
+                <img
+                  src="./images/about/arrow.svg"
+                  alt="Form arrow"
+                  class="form__button-img"
+                >
+              </button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__media">
+          <a href="#Home" class="footer__logo">NA MU</a>
+          <div class="footer__social">
+            <a href="https://www.facebook.com/" class="footer__social-face">
+            </a>
+            <a href="https://www.instagram.com/" class="footer__social-inst">
+            </a>
+          </div>
+        </div>
+        <div class="footer__content">
+          <div class="footer__schedule">
+            <h3 class="footer__title">Графік роботи</h3>
+            <div class="footer__info">
+              <div class="footer__info--day">
+                <p class="footer__info">
+                  <strong>12:00 — 20:00</strong>
+                  середа
+                </p>
+              </div>
+              <div class="footer__info--day">
+                <p class="footer__info">
+                  <strong>12:00 — 20:00</strong>
+                  четвер
+                </p>
+              </div>
+              <div class="footer__info--day">
+                <p class="footer__info">
+                  <strong>12:00 — 20:00</strong>
+                  п’ятниця
+                </p>
+              </div>
+              <div class="footer__info--day">
+                <p class="footer__info">
+                  <strong> 11:00 — 19:00</strong>
+                  субота
+                </p>
+              </div>
+              <div class="footer__info--day">
+                <p class="footer__info">
+                  <strong>11:00 — 19:00</strong>
+                  неділя
+                </p>
+              </div>
+            </div>
+            <div class="footer__weekends">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+          <div class="footer__contacts" id="Contacts">
+            <h3 class="footer__title">Контакти:</h3>
+            <a
+              href="https://goo.gl/maps/JNEo4pzHELwPkjMY7"
+              class="footer__info link link--down"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br>
+            <a href="tel:+38 (044) 278-13-57" class="footer__phone link link--down">
+              тел. +38 (044) 278-13-57
+            </a>
+            <br>
+            <a href="tel:+38 (044) 278-74-54" class="footer__fax link link--down">
+              факс +38 (044) 278-74-54
+            </a>
+            <br>
+            <a href="mailto:info@namu.kiev.ua" class="footer__email link link--down">
+              e-mail:
+              info@namu.kiev.ua
+            </a>
+            <a href="#Home" class="footer__contacts-button"></a>
+          </div>
+        </div>
+        <div class="footer__line"></div>
+        <div class="footer__links">
+          <div class="first-block">
+            <a href="#Galary" class="footer__link link">Галерея</a>
+            <a href="#Events" class="footer__link link">Виставки та події</a>
+          </div>
+          <div class="second-block">
+            <a href="#About-us" class="footer__link link">Про нас</a>
+            <a href="#Contacts" class="footer__link link">Контакти</a>
+          </div>
+        </div>
+      </div>
+
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
