--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
+    <link
+    rel="icon"
+    type="image/png"
+    href="images/logo.png"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
-    <h1 class="title">
-      MUZEUM
-      <br>
-      SZTUKI
-    </h1>
+    <header class="header">
+      <h1 class="title">
+        MUZEUM
+        <br>
+        SZTUKI
+      </h1>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
