--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      type="image/svg"
+      href="images/NA MU.svg"
+    >
   </head>
   <body class="page__body">
     <header class="header" id="Home">
