new Museum repair

--- a/src/index.html
+++ b/src/index.html
@@ -271,9 +271,17 @@
         <div class="footer__media">
           <a href="#Home" class="footer__logo">NA MU</a>
           <div class="footer__social">
-            <a href="https://www.facebook.com/" class="footer__social-face">
+            <a
+              href="https://www.facebook.com/"
+              class="footer__social-face"
+              target="_blank"
+            >
             </a>
-            <a href="https://www.instagram.com/" class="footer__social-inst">
+            <a
+              href="https://www.instagram.com/"
+              class="footer__social-inst"
+              target="_blank"
+            >
             </a>
           </div>
         </div>
