--- a/src/index.html
+++ b/src/index.html
@@ -249,12 +249,15 @@
           <div class="about__form">
             <form class="form">
               <input
+                id="input__form"
                 type="email"
                 placeholder="E-mail"
                 class="form__input"
+                required
               >
               <button type="submit" class="form__button">
                 <img
+                  id="btn__form"
                   src="./images/about/arrow.svg"
                   alt="Form arrow"
                   class="form__button-img"
@@ -337,11 +340,11 @@
               вул. М. Грушевського, 6; Київ, 01001
             </a>
             <br>
-            <a href="tel:+38 (044) 278-13-57" class="footer__phone link link--down">
+            <a href="tel:+38(044)278-13-57" class="footer__phone link link--down">
               тел. +38 (044) 278-13-57
             </a>
             <br>
-            <a href="tel:+38 (044) 278-74-54" class="footer__fax link link--down">
+            <a href="tel:+38(044)278-74-54" class="footer__fax link link--down">
               факс +38 (044) 278-74-54
             </a>
             <br>
