menu & ticket buttons ready

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,25 @@
   </head>
   <body>
     <header class="header">
+      <a href="#menu" class="header__menu icon icon__menu"></a>
+      <div>
+        <img src="./images/header-background.jpg"
+          alt="header-image"
+          class="header__photo"
+        >
+        <a href="#" class="logo header__logo"></a>
+      </div>
+
       <h1 class="title">
         MUZEUM
         <br>
         SZTUKI
       </h1>
+
+      <div class="button">
+        <a class="button__tickets">BILETY</a>
+        <button class="button__arrow"></button>
+      </div>
     </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
