--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,13 @@
   <body>
     <header class="header">
       <a href="#menu" class="header__menu icon icon__menu"></a>
+
       <div>
+        <a href="#" class="header__logo logo"></a>
         <img src="./images/header-background.jpg"
           alt="header-image"
           class="header__photo"
         >
-        <a href="#" class="logo header__logo"></a>
       </div>
 
       <h1 class="title">
