--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,14 @@
         <button class="button__arrow"></button>
       </div>
     </header>
+
+    <main class="main">
+      <h2 class="title title--secondary">
+        Bieżące
+        <br>
+        wydarzenia
+      </h2>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
