create events section

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,43 @@
     </header>
 
     <main class="main">
-      <h2 class="title title--secondary">
-        Bieżące
-        <br>
-        wydarzenia
-      </h2>
+      <section class="events">
+        <h2 class="title title--secondary">
+          Bieżące
+          <br>
+          wydarzenia
+        </h2>
+
+        <img src="./images/events/events_image1.jpg"
+          alt="events-image"
+          class="events__photo"
+        >
+
+        <p class="events__date">WYSTAWA <span class="events__date--highlight">26.08-29.11.2019</span></p>
+
+        <h3 class="title title--third">
+          Iść i wracać
+        </h3>
+
+        <p class="events__info">
+          Narodowe Muzeum Sztuki Ukrainy prezentuje unikalną część kolekcji Gradobanku - sztukę ukraińską drugiej połowy lat 1980-1995.
+        </p>
+
+        <img src="./images/events/events_image2.jpg"
+          alt="events-image"
+          class="events__photo"
+        >
+
+        <p class="events__date">WYSTAWA <span class="events__date--highlight">26.08-29.11.2019</span></p>
+
+        <h3 class="title title--third">
+          I wspomnienia i marzenia
+        </h3>
+
+        <p class="events__info">
+          Narodowe Muzeum Sztuki Ukrainy otwiera retrospektywną wystawę jubileuszową "I wspomnienia i marzenia" z okazji 100. rocznicy urodzin wybitnej ukraińskiej artystki Tetiany Jabłońskiej.
+        </p>
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
