create title with red rectangle

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,13 @@
       </div>
 
       <h1 class="title">
-        MUZEUM
+        ХУДОЖНІЙ
         <br>
-        SZTUKI
+        МУЗЕЙ
       </h1>
 
       <div class="button">
-        <a class="button__tickets">BILETY</a>
+        <a class="button__tickets">КВИТКИ</a>
         <button class="button__arrow"></button>
       </div>
     </header>
@@ -42,9 +42,9 @@
     <main class="main">
       <section class="events">
         <h2 class="title title--secondary">
-          Bieżące
+          Актуальні
           <br>
-          wydarzenia
+          події
         </h2>
 
         <img src="./images/events/events_image1.jpg"
@@ -52,14 +52,14 @@
           class="events__photo"
         >
 
-        <p class="events__date">WYSTAWA <span class="events__date--highlight">26.08-29.11.2019</span></p>
+        <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
-        <h3 class="title title--third">
-          Iść i wracać
+        <h3 class="title title--third title--rectangle">
+          Йду i повертаюсь
         </h3>
 
         <p class="events__info">
-          Narodowe Muzeum Sztuki Ukrainy prezentuje unikalną część kolekcji Gradobanku - sztukę ukraińską drugiej połowy lat 1980-1995.
+          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
         </p>
 
         <img src="./images/events/events_image2.jpg"
@@ -69,12 +69,12 @@
 
         <p class="events__date">WYSTAWA <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
-        <h3 class="title title--third">
-          I wspomnienia i marzenia
+        <h3 class="title title--third title--rectangle">
+          I спогади i мрії
         </h3>
 
         <p class="events__info">
-          Narodowe Muzeum Sztuki Ukrainy otwiera retrospektywną wystawę jubileuszową "I wspomnienia i marzenia" z okazji 100. rocznicy urodzin wybitnej ukraińskiej artystki Tetiany Jabłońskiej.
+          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
         </p>
       </section>
     </main>
