--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,236 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="container">
+
+      <div class="header">
+        <a href="#menu" class="burger-menu"></a>
+        <a href="#" class="logo logo--header">NA<br>MU</a>
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#events" class="header__tickets">
+          <p class="header__tickets--title">квитки</p>
+        </a>
+
+      </div>
+      <div class="header__picture"></div>
+    </div>
+
+    <aside id="menu" class="menu">
+      <div class="menu__content">
+        <a href="#" class="burger-menu burger-menu--close menu__button"></a>
+        <div class="menu__links">
+          <a href="#galery" class="menu__link on-hover-link">Галерея</a>
+          <a href="#subscribe" class="menu__link on-hover-link">Про Нас</a>
+          <a href="#events" class="menu__link on-hover-link">Виставки та<br>події</a>
+          <a href="#footer" class="menu__link on-hover-link">Контакти</a>
+        </div>
+        <div class="menu__separator"></div>
+
+        <div class="menu__schedule summary">
+          <div class="menu__schedule--left-part">
+            <h3 class="schedule__title">Графік роботи</h3>
+            <p class="summary--regular">
+              <span class="summary--bold">12:00 — 20:00 </span>середа<br>
+              <span class="summary--bold">12:00 — 20:00 </span>четвер<br>
+              <span class="summary--bold">12:00 — 20:00 </span>п’ятниця<br>
+              <span class="summary--bold">11:00 — 19:00 </span>субота<br>
+              <span class="summary--bold">11:00 — 19:00 </span>неділя
+            </p>
+          </div>
+          <p class="schedule__weekends menu__schedule--right-part">
+            <span class="summary--bold">Вихідні: </span>понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+      </div>
+    </aside>
+
+    <div class="events section" id="events">
+      <div class="container">
+        <h2 class="section__title">Актуальні події</h2>
+
+        <div class="events__blocks">
+          <div class="event">
+            <img
+              class="event__image hover"
+              src="./images/event/event1.png"
+              alt="event1">
+            <div class="event__content">
+              <h4 class="event__type">ВИСТАВКА
+                <p class="event__date">26.08-29.11.2019</p>
+              </h4>
+              <h3 class="event__title">
+                Йду і повертаюсь
+                <div class="square"></div>
+              </h3>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="event">
+            <img
+            class="event__image"
+            src="./images/event/event2.png"
+            alt="event1">
+            <div class="event__content">
+              <h4 class="event__type">ВИСТАВКА
+                <p class="event__date">26.08-29.11.2019</p>
+              </h4>
+              <h3 class="event__title">
+                І спогади і мрії
+                <div class="square"></div>
+              </h3>
+              <p class="event__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="events__bottom">
+        <img
+        class="event__image"
+        src="./images/event/event3.png"
+        alt="event3">
+
+        <div class="container">
+          <div class="event__content--bottom">
+            <h4 class="event__type event__type--bottom">ВИСТАВКА
+              <p class="event__date">26.08-29.11.2019</p>
+            </h4>
+            <h3 class="event__title event__title--bottom">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container galery section" id="galery">
+      <h2 class="section__title">Галерея</h2>
+      <div class="galery__pictures">
+        <img
+        class="galery-picture galery-picture--high"
+        src="./images/galery/galery1.png"
+        alt="galery1">
+        <img
+        class="galery-picture galery-picture--high galery-picture--width"
+        src="./images/galery/galery2.png"
+        alt="galery2">
+        <img
+        class="galery-picture galery-picture--width"
+        src="./images/galery/galery3.png"
+        alt="galery3">
+        <img
+        class="galery-picture"
+        src="./images/galery/galery4.png"
+        alt="galery4">
+      </div>
+      <div class="galery__slider">
+        <div class="slider-circle"></div>
+        <div class="slider-circle"></div>
+        <div class="slider-circle"></div>
+        <div class="slider-circle"></div>
+      </div>
+    </div>
+
+    <div class="subscribe--bg">
+      <div class="container">
+        <div class="subscribe" id="subscribe">
+          <div class="subscribe__content">
+            <div class="top">
+              <h2 class="top__title">Підписка</h2>
+              <p class="top__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            </div>
+            <form
+              class="mail_input"
+              method="get"
+              name="subscribe-form">
+              <input
+                class="mail_input__input"
+                type="email"
+                name="subscribe"
+                id="subscribe-field"
+                placeholder="E-mail"
+                required>
+              <button type="submit" class="mail_input__button">
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="footer" id="footer">
+        <div class="footer__socials socials">
+          <a href="#" class="logo">NA<br>MU</a>
+          <div class="socials__content">
+            <a
+              href="facebook"
+              class="socials__link socials__link--facebook"
+              target="_blank">
+            </a>
+            <a
+              href="instagram"
+              class="socials__link socials__link--instagram"
+              target="_blank">
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__summary summary">
+          <h3 class="summary__title">Графік роботи</h3>
+          <p class="summary--regular">
+            <span class="summary--bold">12:00 — 20:00 </span>середа<br>
+            <span class="summary--bold">12:00 — 20:00 </span>четвер<br>
+            <span class="summary--bold">12:00 — 20:00 </span>п’ятниця<br>
+            <span class="summary--bold">11:00 — 19:00 </span>субота<br>
+            <span class="summary--bold">11:00 — 19:00 </span>неділя<br><br>
+            Вихідні: понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__summary summary">
+          <h3 class="summary__title">Контакти:</h3>
+          <a class="summary--regular on-hover-link" href="#">вул. М. Грушевського, 6; Київ, 01001</a><br>
+          <a class="summary--regular on-hover-link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a><br>
+          <a class="summary--regular on-hover-link" href="tel:+380442787454">факс +38 (044) 278-74-54</a><br>
+          <a class="summary--regular on-hover-link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+        </div>
+
+        <div class="footer__separator"></div>
+
+        <div class="footer__links footer__links--left">
+          <a class="summary--regular on-hover-link" href="#galery">Галерея</a>
+          <a class="summary--regular on-hover-link" href="#events">Виставки та події</a>
+        </div>
+
+        <div class="footer__links footer__links--right">
+          <a class="summary--regular on-hover-link" href="#subscribe">Про Нас</a>
+          <a class="summary--regular on-hover-link" href="#footer">Контакти</a>
+        </div>
+
+        <div class="footer__copyright">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
+        <a href="#" class="footer__up-button up-button"></a>
+
+      </div>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
