html & css for pictures in events

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
         <img src="./images/events/events_image1.jpg"
           alt="events-image"
-          class="events__photo"
+          class="picture"
         >
 
         <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -64,10 +64,10 @@
 
         <img src="./images/events/events_image2.jpg"
           alt="events-image"
-          class="events__photo"
+          class="picture"
         >
 
-        <p class="events__date">WYSTAWA <span class="events__date--highlight">26.08-29.11.2019</span></p>
+        <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
 
         <h3 class="title title--third title--rectangle">
           I спогади i мрії
