--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
           <div class="menu__line--styles"></div>
         </div>
 
-        <div class="schedule">
+        <div class="schedule menu__schedule">
           <h3 class="schedule__title">Графік роботи</h3>
           <ul class="schedule__list">
             <li class="schedule__item">
@@ -93,8 +93,8 @@
           </ul>
         </div>
 
-        <p class="menu__weekend">
-          <span class="menu__bold">Вихідні:</span>
+        <p class="weekend">
+          <span class="weekend__bold">Вихідні:</span>
           понеділок, вівторок
           Каса припиняє роботу за 1 годину
           до закриття музею
@@ -302,6 +302,80 @@
     </main>
 
     <footer class="footer">
+
+      <div class="footer__top">
+        <a href="#" class="footer__logo">
+          <img src="images/namu-logo.svg" alt="Na Mu logo" class="footer__logo--img">
+        </a>
+
+        <div class="footer__socials">
+          <a href="#" class="icon icon--facebook"></a>
+          <a href="#" class="icon icon--instagram"></a>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        <div class="schedule">
+          <h3 class="schedule__title schedule__title--footer">Графік роботи</h3>
+          <ul class="schedule__list">
+            <li class="schedule__item schedule__item--footer">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              середа
+            </li>
+            <li class="schedule__item schedule__item--footer">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              четвер
+            </li>
+            <li class="schedule__item schedule__item--footer">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              п’ятниця
+            </li>
+            <li class="schedule__item schedule__item--footer">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              субота
+            </li>
+            <li class="schedule__item schedule__item--footer">
+              <span class="schedule__bold">12:00 — 20:00</span>
+              неділя
+            </li>
+          </ul>
+        </div>
+
+        <p class="weekend footer__weekend">
+          Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+
+      <div class="contacts footer__contacts" id="contacts">
+        <h3 class="contacts__title">Контакти:</h3>
+        <p class="contacts__info">
+          вул. М. Грушевського, 6; Київ, 01001
+          тел. +38 (044) 278-13-57
+          факс +38 (044) 278-74-54
+          e-mail: info@namu.kiev.ua
+        </p>
+      </div>
+
+      <a href="#" class="footer__go-top"></a>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__nav">
+
+        <div class="footer__item">
+          <a href="#galery" class="footer__link">Галерея</a>
+          <a href="#actions" class="footer__link">Виставки та події</a>
+        </div>
+
+        <div class="footer__item">
+          <a href="#about-us" class="footer__link">Про Нас</a>
+          <a href="#contacts" class="footer__link">Контакти</a>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__bottom--left">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__bottom--right">Designed by Zhyriada Marina</p>
+      </div>
 
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
