--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/index.scss">
+    <script type="text/javascript" src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
     <header class="header page__header">
@@ -378,6 +379,5 @@
       </div>
 
     </footer>
-    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
