--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
         <p class="subscribe__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
         <form
-          action="https://youtube.com"
+          action="#"
           class="form"
           method="post"
         >
@@ -296,7 +296,7 @@
             >
             </label>
 
-            <button class="form__button"></button>
+            <button type="reset" class="form__button"></button>
           </div>
         </form>
       </section>
