--- a/src/index.html
+++ b/src/index.html
@@ -268,10 +268,10 @@
         </ul>
 
         <div class="galery__desktop">
-          <img class="galery__images galery__images--1" src="images/slider.jpeg" alt="-">
-          <img class="galery__images galery__images--2" src="images/slider-2.jpeg" alt="-">
-          <img class="galery__images galery__images--3" src="images/slider-3.jpeg" alt="-">
-          <img class="galery__images galery__images--4" src="images/slider-4.jpeg" alt="-">
+          <img class="galery__images galery__images--1" src="images/slider-desk.png" alt="-">
+          <img class="galery__images galery__images--2" src="images/slider-desk-2.png" alt="-">
+          <img class="galery__images galery__images--3" src="images/slider-desk-3.png" alt="-">
+          <img class="galery__images galery__images--4" src="images/slider-desk-4.png" alt="-">
         </div>
       </section>
       <section class="subscribe">
