html & css for separator

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
@@ -76,6 +77,21 @@
         <p class="events__info">
           Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
         </p>
+      </section>
+
+      <section class="separator">
+        <img src="./images/separator_image.jpg"
+          alt="separator-image"
+          class="separator__image"
+        >
+
+        <div class="separator__frame">
+          <p class="separator__date">ЛЕКЦІЯ <span class="separator__date--highlight">26/08/2019-11:00</span></p>
+
+          <h3 class="title title--separator">
+            Від класицизму до романтизму
+          </h3>
+        </div>
       </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
