add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,65 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="container">
+        <div class="top__bar">
+          <a href="#side__bar" class="icon icon__burger"></a>
+          <a href="#" class="logo">
+            <img
+              src="./images/logo.png"
+              alt="logo"
+              class="logo__picture"
+            >
+          </a>
+        </div>
+
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <a href="#" class="header__button"> КВИТКИ </a>
+
+        <span class="header__line">
+          <p class="header__line--text">ПОДІЇ</p>
+          <div class="header__line--line"></div>
+        </span>
+
+        <!-- <h2 class="header__item">Актуальні події</h2> -->
+      </div>
+    </header>
+    <aside class="side__bar" id="side__bar">
+      <div class="wrapper">
+        <div class="side__top">
+          <a href="#" class="icon icon--close"></a>
+          <div class="side__top--left">
+            <a href="#" class="side__link">Галерея</a>
+            <a href="#" class="side__link">Виставки та події</a>
+          </div>
+          <div class="side__top--right">
+            <a href="#" class="side__link">Про Нас</a>
+            <a href="#" class="side__link">Контакти</a>
+          </div>
+        </div>
+
+        <div class="side__bar__line"></div>
+
+        <div class="side__bottom">
+          <p class="list__name" >Графік роботи</p>
+          <div class="side__bottom__items">
+            <ul class="side__list">
+              <li class="list__items" > <span class="item__bold" >12:00 — 20:00</span> середа</li>
+              <li class="list__items" > <span class="item__bold" >12:00 — 20:00</span> четвер</li>
+              <li class="list__items" > <span class="item__bold" >12:00 — 20:00</span> п’ятниця</li>
+              <li class="list__items" > <span class="item__bold" >11:00 — 19:00</span> субота</li>
+              <li class="list__items" > <span class="item__bold" >11:00 — 19:00</span> неділя</li>
+            </ul>
+            <div class="side__weekend">
+              <p class="side__weekend--days"> <span class="item__bold" >Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
