--- a/src/index.html
+++ b/src/index.html
@@ -296,11 +296,26 @@
               <h6 class="how-to-contact__title">Контакти:</h6>
 
               <p class="how-to-contact__text">
-                вул. М. Грушевського, 6; Київ,<br>
-                01001<br>
-                тел. +38 (044) 278-13-57<br>
-                факс +38 (044) 278-74-54<br>
-                e-mail: info@namu.kiev.ua
+                <a
+                  href="https://maps.app.goo.gl/DWAAuG9Wf2enZnhF6"
+                  class="how-to-contact__link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ,<br>
+                  01001<br>
+                </a>
+
+                <a href="tel:+380442781357" class="how-to-contact__link">
+                  тел. +38 (044) 278-13-57<br>
+                </a>
+
+                <a href="tel:+380442787454" class="how-to-contact__link">
+                  факс +38 (044) 278-74-54<br>
+                </a>
+
+                <a href="mailto:info@namu.kiev.ua" class="how-to-contact__link">
+                  e-mail: info@namu.kiev.ua
+                </a>
               </p>
             </div>
 
