--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,8 @@
   </head>
   <body class="page">
     <header class="header container">
-
       <div class="top-bar">
-        <a href="#" class="icon menu-icon"></a>
+        <a href="#menu" class="icon menu--icon"></a>
         <a href="#" class="top-bar__logo"></a>
       </div>
 
@@ -35,7 +34,22 @@
       </div>
     </header>
 
-    <aside></aside>
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__top">
+        <a href="#" class="icon icon--close"></a>
+
+        <div class="menu__nav">
+          <div class="menu__links">
+            <a href="#gallery" class="menu__link">Галерея</a>
+            <a href="#" class="menu__link">Виставки та події</a>
+          </div>
+          <div class="menu__links">
+            <a href="#" class="menu__link">Про Нас</a>
+            <a href="#contacts" class="menu__link">Контакти</a>
+          </div>
+        </div>
+      </div>
+    </aside>
 
     <main class="main">
       <section class="section events">
@@ -95,7 +109,7 @@
 
       </section>
 
-      <section class="gallery section">
+      <section class="gallery section" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
 
         <div class="gallery__carousel">
@@ -187,7 +201,7 @@
           </article>
         </div>
 
-        <div class="footer__contacts">
+        <div class="footer__contacts" id="contacts">
           <article class="footer__title">Контакти:</article>
           <article class="footer__address">
             вул. М. Грушевського, 6; Київ, 01001 <br>
@@ -209,12 +223,12 @@
 
       <div class="footer__inform">
         <div class="footer__links">
-          <a href="#" class="footer__link">Галерея</a>
+          <a href="#gallery" class="footer__link">Галерея</a>
           <a href="#" class="footer__link">Виставки та події</a>
         </div>
         <div class="footer__links">
           <a href="#" class="footer__link">Про Нас</a>
-          <a href="#" class="footer__link">Контакти</a>
+          <a href="#contacts" class="footer__link">Контакти</a>
         </div>
       </div>
 
