--- a/src/index.html
+++ b/src/index.html
@@ -263,13 +263,13 @@
 
             <div class="icons__social">
               <a
-                href="https:\facebook.com"
+                href="https://www.facebook.com/namu.museum"
                 target="_blank"
                 class="icons__link icons__link--facebook"
               ></a>
 
               <a
-                href="https:\instagram.com"
+                href="https://www.instagram.com/namu.museum/"
                 target="_blank"
                 class="icons__link icons__link--instagram"
               ></a>
