add onsubmit to form

--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,11 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <form action="POST" class="folowing__form">
+        <form
+          action="POST"
+          class="folowing__form"
+          onsubmit="this.reset(); return false;"
+        >
           <input
             type="email"
             placeholder="E-mail"
