--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,12 @@
             <h1 class="header__title">Художній музей</h1>
 
             <button type="button" class="header__button button">
-              <a href="#lecture" class="button__link">
+              <a href="#events" class="button__link">
                 <div class="button__text">Квитки</div>
 
                 <img
                   src="images/icon/icon_green_button_arrow.png"
-                  alt="arrow"
+                  alt="arrow icon"
                   class="button__arrow"
                 >
               </a>
@@ -243,7 +243,9 @@
         </p>
 
         <form
-          action="POST"
+          action="#"
+          method="POST"
+          name="folowing-form"
           class="folowing__form"
           onsubmit="this.reset(); return false;"
         >
@@ -254,7 +256,9 @@
             required
           >
 
-          <button type="submit" class="folowing__submit"></button>
+          <button
+            type="submit"
+            class="folowing__submit"></button>
         </form>
       </section>
     </main>
